--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx", "pages/_app.js", "components/Layout.js", "lib/content-loader.js", "pages/posts/[slug].js"
+    "**/*.tsx", "pages/_app.js", "components/Layout.js", "lib/content-loader.js", "pages/posts/[id].js"
   ],
   "exclude": [
     "node_modules"
