--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.6.6",
+    "react-markdown": "^6.0.2",
     "react-twitter-embed": "^3.0.3",
     "remark": "^13.0.0",
     "remark-gfm": "^1.0.0",
